// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderingIntent renders 0 1`] = `
Array [
  .c0 {
  rendering-intent: 0;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: 0;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: 0;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders function 1`] = `
Array [
  .c0 {
  rendering-intent: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: has;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: has;
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders invalid theme path 1`] = `
Array [
  .c0 {
  rendering-intent: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders negative number 1`] = `
Array [
  .c0 {
  rendering-intent: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    rendering-intent: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rendering-intent: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    rendering-intent: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rendering-intent: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rendering-intent: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rendering-intent: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rendering-intent: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    rendering-intent: July;
  }
}

@media April {
  .c0 {
    rendering-intent: August;
  }
}

@media January {
  .c0 {
    rendering-intent: September;
  }
}

@media April {
  .c0 {
    rendering-intent: November;
  }
}

@media June {
  .c0 {
    rendering-intent: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    rendering-intent: July;
  }
}

@media April {
  .c0 {
    rendering-intent: August;
  }
}

@media January {
  .c0 {
    rendering-intent: September;
  }
}

@media April {
  .c0 {
    rendering-intent: November;
  }
}

@media June {
  .c0 {
    rendering-intent: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    rendering-intent: January;
  }
}

@media April {
  .c0 {
    rendering-intent: December;
  }
}

@media January {
  .c0 {
    rendering-intent: April;
  }
}

@media April {
  .c0 {
    rendering-intent: May;
  }
}

@media June {
  .c0 {
    rendering-intent: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    rendering-intent: January;
  }
}

@media April {
  .c0 {
    rendering-intent: December;
  }
}

@media January {
  .c0 {
    rendering-intent: April;
  }
}

@media April {
  .c0 {
    rendering-intent: May;
  }
}

@media June {
  .c0 {
    rendering-intent: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders postitive number 1`] = `
Array [
  .c0 {
  rendering-intent: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders string 1`] = `
Array [
  .c0 {
  rendering-intent: July;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: July;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: June;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: June;
}

<div
    className="c0"
  />,
]
`;

exports[`renderingIntent renders valid theme path 1`] = `
Array [
  .c0 {
  rendering-intent: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  rendering-intent: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
